--- a/modern_javascript_DeepDive/26. Additional features of the ES6 function.md
+++ b/modern_javascript_DeepDive/26. Additional features of the ES6 function.md
@@ -94,14 +94,124 @@ console.log(person.sayHi());
 [1,2,3].map(v => v*2);
 ```
 
-<hr> 
-
-## 화살표 함수와 일반 함수의 차이
+### 화살표 함수와 일반 함수의 차이
 
 - 화살표 함수는 인스턴스를 생성할 수 없는 non-constructor다.
 - 중복된 매개변수 이름을 선언할 수 없다.
 - 화살표 함수는 함수자체의 this, arguments, super, new.target 바인딩을 갖지 않는다.
 
+### this
+
+화살표 함수의 this는 일반 함수의 this와 다르게 동작한다. 
+
+this 바인딩은 함수의 호출 방식, 즉 함수가 어떻게 호출되었는지에 따라 동적으로 결정된다.
+
+=> 함수를 정의할 때 this에 바인딩할 객체가 정적으로 결정되는 것이 아니고, 함수를 호출할 때 함수가 어떻게 호출되었는지에 따라 this에 바인딩할 객체가 동적으로 결정된다.
+
+```javascript
+// 문제 예시
+class Prefixer {
+    constructor(prefix) {
+        this.prefix = prefix;
+    }
+    
+    add(arr) {
+        return arr.map(function (item) {
+            return this.prefix + item;
+            // -> TypeError
+        });
+    }
+}
+
+const prefixer = new Prefixer('-webkit-')
+console.log(prefixer.add(['transition', 'user-select']))
+```
+
+```javascript
+// 해결방법 1
+...
+add(arr){
+    // this를 일단 that에 보냄
+    const that = this;
+    return arr.map(function (item) {
+        // this 대신 that 참조
+        return that.prefix + ' ' + item;
+    });
+}
+
+
+// 해결방법 2
+...
+add(arr){
+    return arr.map(function (item) {
+        return this.prefix + ' ' + item;
+    }, this); // this에 바인딩된 값이 콜백 함수 내부의 this에 바인딩된다.
+}
+
+// 해결방법 3
+add(arr){
+    return arr.map(function (item) {
+        return this.prefix + ' ' + item;
+    }.bind(this)); // this에 바인딩된 값이 콜백 함수 내부의 this에 바인딩된다.
+}
+
+// 해결방법 4 => 화살표 함수 사용
+
+add(arr) {
+    return arr.map(item => this.prefix + item);
+}
+```
+
+화살표 함수는 함수 자체의 this 바인딩을 갖지 않는다. 화살표 함수 내부에서 this를 참조하면 상위 스코프의 this를 그대로 참조한다.
+
+### super
+화살표 함수는 함수 자체의 super 바인딩을 갖지 않는다. 따라서 화살표 함수 내부에서 super를 참조하면 this와 마찬가지로 상위 스코프의 super를 참조한다.
+```javascript
+class Base {
+    constructor(name) {
+        this.name = name;
+    }
+    
+    sayHi() {
+        return `Hi! ${this.name}`;
+    }
+}
+
+class Derived extends Base {
+    // 화살표함수의 super는 상위 스코프인 constructor의 super를 가리킴
+    sayHi = () => `${super.sayHi()} how are you doing?`
+}
+
+const derived = new Derived('Lee');
+cosole.log(derived.sayHi()) // Hi! Lee how are you doing?
+```
+
 <hr>
 
-## this
+## Rest 파라미터
+
+### 기본 문법
+Rest 파라미터(나머지 매개변수)는 매개변수 이름 앞에 세개의 점 ... 을 붙여서 정의한 매개변수를 의미한다. Rest 파라미터는 함수에 전달된 인수들의 목록을 배열로 전달받는다.
+
+```javascript
+function foo(...rest) {
+    console.log(rest); // [ 1, 2, 3, 4, 5]
+}
+
+foo(1, 2, 3, 4, 5);
+```
+
+<hr>
+
+## 매개변수 기본값
+
+ES6에 도입된 매개변수 기본값을 사용하면 함수 내에서 수행하던 인수 체크 및 초기화를 간소화할 수 있다.
+```javascript
+function sum(x = 0, y = 0) {
+    return x + y;
+}
+
+console.log(sum(1, 2)); // 3
+console.log(sum(2)); // 2
+```
+단, 매개변수에 인수를 전달하지 않은 경우와 undefined를 전달한 경우에만 유효하다. (null은 x)
