--- a/modern_javascript_DeepDive/27. Array.md
+++ b/modern_javascript_DeepDive/27. Array.md
@@ -252,7 +252,7 @@ console.log(result) // [1,2,3,4]
 splice 메서드는 원본 배열의 중간에 요소를 추가하거나 중간에 있는 요소를 제거한다. 3개의 매개변수가 있다.
 
 ```javascript
-const arr = [1,2,3] 
+arr.splice(1,2,3) 
 // 1: start => 원본 배열의 요소를 제거하기 시작할 인덱스
 // 2: deleteCount => start로 부터 제거할 요소의 개수 (옵션)
 // 3: items => 제거한 위치에 삽입할 요소들의 목록 (옵션)
@@ -268,3 +268,178 @@ console.log(result) // [2,3]
 console.log(test) // [1,20,30.4]
 ```
 
+### Array.prototype.slice (원본 배열 변경 x)
+
+```javascript
+arr.slice(1,2)
+// 1: start => 복사를 시작할 인덱스. 음수일 경우 배열의 끝에서의 인덱스를 나타냄
+// 2: end => 복사를 종료할 인덱스
+```
+
+### Array.prototype.join
+
+구분자로 연결한 문자열을 반환함
+```javascript
+const arr = [1,2,3,4]
+
+arr.join(); // -> '1,2,3,4'
+arr.join(''); // -> '1234'
+arr.join(':'); // -> '1:2:3:4'
+```
+
+### Array.prototype.reverse ( 원본 배열 변경 o)
+원본 배열의 순서를 반대로 뒤집는다.
+```javascript
+const arr = [1,2,3]
+const result = arr.reverse()
+```
+
+### Array.prototype.fill (원본 배열 변경 o)
+ES6에서 도입된 fill 메서드는 인수로 전달받은 값을 배열의 처음부터 끝까지 요소로 채운다.
+```javascript
+const arr = [1,2,3]
+arr.fill(0)
+console.log(arr); // [0,0,0]
+
+arr.fill(1,1) // 두번째 인수 : 요소 채우기를 시작할 인덱스
+console.log(arr); // [0,1,1]
+
+arr.fill(2,1,2) // 세번째 인수 : 요소 채우기를 멈출 인덱스
+console.log(arr) // [0,2,1]
+```
+
+<hr>
+
+## 배열 고차 함수
+
+고차 함수는 함수를 인수로 전달받거나 함수를 반환하는 함수
+
+### Array.prototype.sort (원본 배열 변경 o)
+
+sort 메서드는 배열의 요소를 정렬한다. 기본적으로 오름차순 정렬이다. 
+
+내림차순으로 정렬할꺼면 .sort() 이후에 .reverse()
+
+sort 메서드의 기본 정렬 순서는 유니코드 코드 포인트의 순서다. 
+```javascript
+const points = [40, 100, 1, 5, 2]
+points.sort()
+console.log(points) // [1, 100, 2, 40, 5]
+```
+
+숫자 요소를 정렬할 때는 정렬 순서를 정의하는 비교함수를 인수로 전달하면 된다.
+```javascript
+const points = [40, 100, 1, 5, 2]
+
+// 오름차순
+points.sort((a,b) => a-b)
+console.log(points) // [1, 2, 5, 40, 100]
+```
+*sort 메서드는 quicksort 알고리즘 했었지만 ES10에서는 timsort 알고리즘을 사용한다.*
+
+### Array.prototype.forEach
+
+forEach 메서드의 콜백 함수는 forEach 메서드를 호출한 배열의 요소값과 인덱스, forEach 메서드를 호출한 배열 자체, 즉 this 를 순차적으로 받을 수 있다.
+
+```javascript
+const arr = [1,2,3]
+arr.forEach((item, index, arr) => {
+    console.log(`요소값: ${item}, 인덱스: ${index}, this: ${JSON.stringify(arr)}`)
+})
+// 요소값: 1, 인덱스: 0, this: [1,2,3]
+// 요소값: 2, 인덱스: 1, this: [1,2,3]
+// 요소값: 3, 인덱스: 2, this: [1,2,3]
+```
+
+*forEach 메서드는 for문에 비해 성능은 안좋은데 가독성이 좋다.*
+
+### Array.prototype.map
+map 메서드는 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백 함수를 반복 호출한다. 그리고 콜백 함수의 반환값들로 구성된 새로운 배열을 반환한다.
+
+forEach메서드는 단순 반복문을 대체하기 위한 고차함수이고, map 메서드는 요소값을 다른 값으로 매핑한 새로운 배열을 생성하기 위한 고차 함수다.
+
+### Array.prototype.filter (원본 배열 변경x)
+filter 메서드는 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백 함수를 반복 호출한다. 그리고 콜백 함수의 반환값이 true인 요소로만 구성된 새로운 배열을 반환한다.
+
+```javascript
+const numbers = [1,2,3,4,5]
+
+const odd = numbers.filter(item => item %2)
+console.log(odd) // [1,3,5]
+```
+
+### Array.prototype.reduce
+
+reduce 메서드는 자신을 호출한 배열을 모든 요소를 순회하며 인수로 전달받은 콜백 함수를 반복 호출한다.
+
+첫번째 인수 : 콜백 함수 //  두번째 인수 : 초기값
+```javascript
+// 평균 구하기
+const values = [1,2,3,4,5,6]
+
+// acc=누적값, cur=현재값, i=인덱스
+const aver = values.reduce((acc, cur, i, { length }) => {
+    // 마지막 순회가 아니면 누적값을 반환, 마지막 순회면 평균을 구해 반환
+    return i === length -1 ? (acc + cur) / length : acc + cur;
+}, 0)
+console.log(aver) // 3.5
+```
+
+### Array.prototype.some
+
+some 메서드는 자신을 호출한 배열의 요소를 순회하면서 인수로 전달된 콜백 함수를 호출한다.
+<br> 이때 some메서드는 콜백 함수의 반환값이 단 한 번이라도 참이면 true, 모두 거짓이면 false를 반환한다.
+
+```javascript
+[5,10,15].some(item => item > 10) // true
+[5,10,15].some(item => item < 0) // false
+```
+
+### Array.prototype.every
+
+every 메서드는 자신을 호출한 배열의 요소를 순회하면서 인수로 전달된 콜백 함수를 호출한다.
+<br> 이때 every 메서드는 콜백 함수의 반환값이 모두 참이면 true, 하나라도 거짓이면 false를 반환한다.
+
+```javascript
+[5,10,15].every(item => item > 3) // true
+[5,10,15].every(item => item < 10) // false
+```
+
+### Array.prototype.find
+
+find 메서드는 자신을 호출한 배열의 요소를 순회하면서 인수로 전달된 콜백 함수를 호출하여 반환값이 true인 첫번째 요소를 반환한다.
+<br> 콜백 함수의 반환값이 true인 요소가 존재하지 않으면 undefined 를 반환한다.
+
+```javascript
+const users = [
+    { id: 1, name: 'Lee'},
+    { id: 2, name: 'Kim'},
+]
+
+users.find(user => user.id === 2) // {id: 2, name: 'Kim'}
+```
+
+### Array.prototype.findIndex
+findIndex 메서드는 자신을 호출한 배열의 요소를 순회하면서 인수로 전달된 콜백 함수를 호출하여 반환값이 true인 첫번째 요소의 인덱스를 반환한다.
+<br> 콜백 함수의 반환값이 true인 요소가 존재하지 않으면 -1 를 반환한다.
+
+```javascript
+const users = [
+    { id: 1, name: 'Lee'},
+    { id: 2, name: 'Kim'},
+]
+
+users.findIndex(user => user.id === 2) // 1
+```
+
+### Array.prototype.flatMap
+map 메서드를 통해 생성된 새로운 배열을 평탄화한다. 즉 map메서드와 flat메서드를 순차적으로 실행하는 효과가 있다.
+
+```javascript
+const arr = ['hello', 'world']
+
+arr.flatMap(x => x.split(''))
+// ['h', 'e', 'l', 'l', 'o', 'w', 'o', 'r', 'l', 'd']
+```
+
+평탄화 깊이를 기정하고자 한다면 flatMap이 아니라 flat과 map을 따로 써야한다.
